Fixed routing issues with API gateway